# libmedfest

./: CMakeLists.txt  FestData.h  FestDeserializer.cpp  FestDeserializer.h  FestDeserializer_Preload.cpp  FestObjectStream.cpp  FestObjectStream.h  FestSerializer.cpp  FestSerializer.h  FestSerializer_0.cpp  FestVectors.cpp  FestZip.cpp  FestZip.h  README.md  XMLParser.cpp  XMLParser.h  addtofest.cpp  copyfestdata.cpp  cppmain.cpp  cppmain.h  decodefest.cpp  dumpfestdata.cpp  libzip_file.cpp  libzip_file.h  libzip_zip.cpp  libzip_zip.h  license.txt
Fest/: CMakeLists.txt  Fest.cpp  Fest.h  FestIdObject.cpp  FestIdObject.h  KatByttegruppe.cpp  KatByttegruppe.h  KatHandelsvare.cpp  KatHandelsvare.h  KatInteraksjon.cpp  KatInteraksjon.h  KatKodeverk.cpp  KatKodeverk.h  KatLegemiddelMerkevare.cpp  KatLegemiddelMerkevare.h  KatLegemiddelVirkestoff.cpp  KatLegemiddelVirkestoff.h  KatLegemiddeldose.cpp  KatLegemiddeldose.h  KatLegemiddelpakning.cpp  KatLegemiddelpakning.h  KatRefusjon.cpp  KatRefusjon.h  KatStrDosering.cpp  KatStrDosering.h  KatVarselSlv.cpp  KatVarselSlv.h  KatVilkar.cpp  KatVilkar.h  KatVirkestoff.cpp  KatVirkestoff.h  StatusObject.cpp  StatusObject.h  TidspunktObject.cpp  TidspunktObject.h  XMLObject.h  XmlAdministreringLegemiddel.cpp  XmlAdministreringLegemiddel.h  XmlAntall.cpp  XmlAntall.h  (+144 more)
Struct/Decoded/: AdministreringLegemiddel.cpp  AdministreringLegemiddel.h  Atc.cpp  Atc.h  BruksomradeEtikett.h  Byttegruppe.cpp  Byttegruppe.h  CMakeLists.txt  DDD.h  Deling.h  DoseFastTidspunkt.cpp  DoseFastTidspunkt.h  Dosering.cpp  Dosering.h  Element.cpp  EnhetDosering.h  EnhetForskrivning.h  EnhetStorrelse.h  FastDose.cpp  FastDose.h  GjelderFor.h  Handelsvare.cpp  Handelsvare.h  Info.cpp  Info.h  InjeksjonshastighetBolus.h  Interaksjon.cpp  Interaksjon.h  InteraksjonIkkeVurdert.cpp  InteraksjonIkkeVurdert.h  KanApnes.h  Klasse.h  Kortdose.cpp  Kortdose.h  Legemiddel.cpp  Legemiddel.h  LegemiddelCore.cpp  LegemiddelCore.h  LegemiddelMerkevare.cpp  LegemiddelMerkevare.h  (+108 more)
Struct/Packed/: CMakeLists.txt  DoseFastTidspunktList.cpp  DoseFastTidspunktList.h  DoseringList.cpp  DoseringList.h  ElementList.cpp  ElementList.h  FestUuid.cpp  FestUuid.h  FestUuidList.cpp  FestUuidList.h  GenericListStorage.h  LegemiddelforbrukList.cpp  LegemiddelforbrukList.h  PAdministreringLegemiddel.cpp  PAdministreringLegemiddel.h  PByttegruppe.cpp  PByttegruppe.h  PDoseFastTidspunkt.cpp  PDoseFastTidspunkt.h  PDosering.cpp  PElement.cpp  PFest.cpp  PFestId.cpp  PFestId.h  PFest_convert.cpp  PHandelsvare.cpp  PHandelsvare.h  PInfo.cpp  PInfo.h  PInteraksjon.cpp  PInteraksjon.h  PInteraksjonIkkeVurdert.cpp  PInteraksjonIkkeVurdert.h  PKortdose.cpp  PKortdose.h  PLegemiddel.cpp  PLegemiddel.h  PLegemiddelCore.cpp  PLegemiddelCore.h  (+133 more)
Test/: CMakeLists.txt  FileImportTest.cpp  SerializeDeserializeTests.cpp
Test/Struct/Packed/: CMakeLists.txt  FestUuidListTest.cpp  FestUuidListTest_0_0_0.cpp  PFestIdTest.cpp  PStingTest.cpp
include/: DbVersion.h  FestData.h  FestDeserializer.h  FestHeaders.h  FestObjectStream.h  FestSerializer.h  FestSerializer_0.h  FestVectors.h  FestZip.h  XMLParser.h  exttype_zip_file.h  libzip_zip.h
include/Fest/: Fest.h
include/Struct/Decoded/: Administrasjonsvei.h  AdministreringLegemiddel.h  Bolus.h  Byttegruppe.h  DoseFastTidspunkt.h  Dosering.h  Element.h  EnhetPakning.h  FastDose.h  ForhandsregelInntak.h  Gruppe.h  GruppeNr.h  Handelsvare.h  InteraksjonIkkeVurdert.h  KanKnuses.h  Kildegrunnlag.h  LegemiddelCore.h  LegemiddelMerkevare.h  LegemiddelVirkestoff.h  Legemiddeldose.h  Legemiddelforbruk.h  LegemiddelformKort.h  Legemiddelpakning.h  Lenke.h  Leverandor.h  Markedsforingsinfo.h  MaybeBoolean.h  Oppf.h  OppfByttegruppe.h  OppfHandelsvare.h  OppfInteraksjon.h  OppfInteraksjonBase.h  OppfInteraksjonIkkeVurdert.h  OppfKodeverk.h  OppfLegemiddelMerkevare.h  OppfLegemiddeldose.h  OppfRefusjon.h  OppfStrDosering.h  OppfVarselSlv.h  OppfVilkar.h  (+22 more)
include/Struct/Packed/: DoseFastTidspunktList.h  DoseringList.h  ElementList.h  FestUuid.h  FestUuidList.h  GenericListStorage.h  LegemiddelforbrukList.h  PAdministreringLegemiddel.h  PByttegruppe.h  PDosering.h  PElement.h  PFest.h  PFestId.h  PHandelsvare.h  PInfo.h  PInteraksjon.h  PKortdose.h  PLegemiddel.h  PLegemiddelCore.h  PLegemiddelMerkevare.h  PLegemiddelVirkestoff.h  PLegemiddeldose.h  PLegemiddelforbruk.h  PLegemiddelpakning.h  PLeverandor.h  POppf.h  POppfByttegruppe.h  POppfHandelsvare.h  POppfInteraksjon.h  POppfKodeverk.h  POppfLegemiddelMerkevare.h  POppfLegemiddelVirkestoff.h  POppfLegemiddeldose.h  POppfLegemiddelpakning.h  POppfRefusjon.h  POppfVarselSlv.h  POppfVilkar.h  POppfVirkestoff.h  POppfVirkestoffMedStyrke.h  PPakningsinfo.h  (+40 more)
