cmake_minimum_required(VERSION 3.24)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Struct/Packed)

add_executable(serializedeserializetests SerializeDeserializeTests.cpp)
target_include_directories(serializedeserializetests PRIVATE ../include)
if (WIN32)
    target_link_libraries(serializedeserializetests PRIVATE medfesttestobj)
    target_link_libraries(serializedeserializetests PRIVATE fest)
    target_link_libraries(serializedeserializetests PRIVATE packed)
    target_link_libraries(serializedeserializetests PRIVATE decoded)
    target_link_libraries(serializedeserializetests PRIVATE ${EXPAT_LIBRARIES})
    target_link_libraries(serializedeserializetests PRIVATE ${libzip_LIBRARIES})
else()
    target_link_libraries(serializedeserializetests PRIVATE medfest)
endif()

add_test(SerializeDeserializeTests serializedeserializetests)

add_executable(fileimporttest FileImportTest.cpp)
target_include_directories(fileimporttest PRIVATE ../include)
if (WIN32)
    target_link_libraries(fileimporttest PRIVATE medfesttestobj)
    target_link_libraries(fileimporttest PRIVATE fest)
    target_link_libraries(fileimporttest PRIVATE packed)
    target_link_libraries(fileimporttest PRIVATE decoded)
    target_link_libraries(fileimporttest PRIVATE ${EXPAT_LIBRARIES})
    target_link_libraries(fileimporttest PRIVATE ${libzip_LIBRARIES})
else()
    target_link_libraries(fileimporttest PRIVATE medfest)
endif()

add_test(FileImportTest fileimporttest)
